サイドバーやんぺ。ヘッダー調整。gem Fontawesome入れた（古い）。

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,6 +1,8 @@
 #app
   navbar
-  .container
-    router-view
+  bookmarkbar
+  .container-fluid
+    .row.flex-xl-nowrap
+      router-view
 
 = javascript_pack_tag 'bookmark'
