--- a/app/views/bookmarks/new.html.slim
+++ b/app/views/bookmarks/new.html.slim
@@ -1,12 +1,17 @@
-= form_for @bookmark, :remote => true do |f|
-  = f.label :name
-  |:
-  = f.text_field :name
-  br
+#app
+  navbar
+  main
+    = form_for @bookmark, :remote => true do |f|
+      = f.label :name
+      |:
+      = f.text_field :name
+      br
 
-  = f.label :url
-  |:
-  = f.text_field :url
-  br
+      = f.label :url
+      |:
+      = f.text_field :url
+      br
 
-  = f.submit
+      = f.submit
+
+= javascript_pack_tag 'bookmark'
