--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,6 +3,25 @@
   bookmarkbar
   .container-fluid
     .row.flex-xl-nowrap
-      router-view
+      aside.sidebar
+        .sidebar__items
+          .sidebar__item
+            = link_to 'Add Bookmark', add_bookmark_path, class: 'sidebar__link'
+          .sidebar__item
+            = link_to 'Manage Bookmarks', '#', class: 'sidebar__link'
+          .sidebar__item
+            = link_to 'Manage Folders', '#', class: 'sidebar__link'
+          .sidebar__item
+            = link_to 'Import Bookmarks', '#', class: 'sidebar__link'
+          .sidebar__item
+            = link_to 'Export Bookmarks', '#', class: 'sidebar__link'
+      main.main
+        .w-100.text-center.py-3.mt-3
+          p
+            | Bookmark pages more easily. Drag this bookmarklet to the Bookmarks bar of your browser:
+            a.btn.btn-sm.btn-primary.ml-2 href='javascript:(function(){var a=window,b=document,c=encodeURIComponent,d=a.open(&quot;http://localhost:3000/bookmarks/new?op=edit&amp;output=popup&amp;bkmk=&quot;+c(b.location)+&quot;&amp;title=&quot;+c(b.title),&quot;bkmk_popup&quot;,&quot;left=&quot;+((a.screenX||a.screenLeft)+700)+&quot;,top=&quot;+((a.screenY||a.screenTop)+10)+&quot;,height=510px,width=550px,resizable=1,alwaysRaised=1&quot;);a.setTimeout(function(){d.focus()},300)})();' Bookmark
+        router-view
+
+.footer
 
 = javascript_pack_tag 'bookmark'
