一個目のカラムでの表示に対応

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,7 +4,8 @@
 
 .navbar-nav .dropdown-menu {
   position: absolute;
-  left: -90px;
+  left: -235px;
+  width: 300px;
 }
 
 #search-input {
@@ -104,4 +105,10 @@
   &:hover {
     text-decoration: none;
   }
+}
+
+.pos-bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
