ヘッダー・検索の出し分け。

--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -37,6 +37,8 @@
             div
               = f.submit "Add Bookmark", class: 'btn btn-primary'
 
-.footer
+.footer.bg-dark.pos-bottom
+  .text-right.text-white.p-1.px-3
+    a.copyright.text-white href="https://www.benzoh.com/" target="_blank" © Benzoh.com
 
 = javascript_pack_tag 'bookmark'
