--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -4,8 +4,9 @@ nav.navbar.navbar-light.bg-dark
     | Bookmarks
   a.px-2.mr-2.text-white href="#home"
     i.fa.fa-home.fa-lg aria-hidden="true"
-  form.flex-grow-1.mr-2
-    input type="search" class="form-control" id="search-input" placeholder="Search..."
+  - if ['home#index'].include? @loaded_action
+    form.flex-grow-1.mr-2
+      input type="search" class="form-control" id="search-input" placeholder="Search..."
   ul.flex-row.navbar-nav.ml-auto
     li.nav-item.dropdown.ml-auto.px-2
       a.nav-link.dropdown-toggle.text-white href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
