コピーライト変更。

--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -39,6 +39,6 @@
 
 .footer.bg-dark.pos-bottom
   .text-right.text-white.p-1.px-3
-    a.copyright.text-white href="https://www.benzoh.com/" target="_blank" © Benzoh.com
+    a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © hippohack
 
 = javascript_pack_tag 'bookmark'
