--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -11,5 +11,5 @@
 
 .footer.bg-dark
   .text-right.text-white.p-1.px-3
-    a.copyright.text-white href="https://www.benzoh.com/" target="_blank" © Benzoh.com
+    a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © hippohack
 = javascript_pack_tag 'bookmark'
