--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -8,17 +8,17 @@
           .form-group
             = f.label :name
             = f.text_field :name, class: 'form-control'
-            .form-text.text-muted ex: Benzoh's Website
+            .form-text.text-muted ex: HippoHack
 
           .form-group
             = f.label :url
             = f.text_field :url, class: 'form-control'
-            .form-text.text-muted ex: https://www.benzoh.com/
+            .form-text.text-muted ex: https://www.hippohack.me/
 
           .form-group
             = f.label :folder_id
             .folder-list.p-3
-              folders :_hierarchy_data="#{ @folders.to_json }" :_all_folders="#{ @all_folders.to_json }" :_level="1" :_id="#{@top_folder_id}"
+              folders :_hierarchy_data="#{ @folders.to_json }" :_all_folders="#{ @all_folders.to_json }" :_level="1" :_id="#{@top_folder_id}" :_is_new_folder="is_new_folder" :_new_folder_parent_id="new_folder_parent_id"
 
           / .form-group
           /   = f.label :labels
@@ -31,7 +31,7 @@
 
           .d-flex.mt-3
             div.mr-auto
-              = link_to '新しいフォルダ', '#', class: 'btn btn-outline-primary'
+              = link_to '新しいフォルダ', 'javascript:void(0)', class: 'btn btn-outline-primary', id: 'new-folder', 'v-on:click': "show_new_folder"
             div.mr-2
               = link_to 'キャンセル', '#', class: 'btn btn-outline-primary'
             div
