--- a/app/views/bookmarks/new.html.slim
+++ b/app/views/bookmarks/new.html.slim
@@ -2,25 +2,30 @@
   = render "shared/navbar"
   main.p-3
     = form_for @bookmark, :remote => true do |f|
-      = f.fields_for :url do |url|
-        .form-group
-          = url.label :name
-          |: 
-          = url.text_field :name, class: 'form-control'
+      .form-group
+        = f.label :name
+        = f.text_field :name, class: 'form-control'
+        .form-text.text-muted ex: HippoHack
 
-        .form-group
-          = url.label :url
-          |:
-          = url.text_field :url, class: 'form-control'
+      .form-group
+        = f.label :url
+        = f.text_field :url, class: 'form-control'
+        .form-text.text-muted ex: https://www.hippohack.me/
 
-      / TODO: フォルダーのセレクト
-      folders
+      .form-group
+        = f.label :folder_id
+        .folder-list.p-3
+          folders :_hierarchy_data="#{ @folders.to_json }" :_all_folders="#{ @all_folders.to_json }" :_level="1" :_id="#{@top_folder_id}" :_is_new_folder="is_new_folder" :_new_folder_parent_id="new_folder_parent_id"
 
-      .d-flex.mt-4
-        a.btn.btn-outline-primary.mr-auto href="#" 新しいフォルダ
-        a.btn.btn-outline-primary href="javascript:window.close();" キャンセル
-        = f.submit '保存', {class: 'btn btn-primary ml-2'}
-      
-      = f.hidden_field :item_type, :value => 'url'
+      = hidden_field_tag :popup, 'true'
+
+      .d-flex.mt-3
+        div.mr-auto
+          = link_to '新しいフォルダ', 'javascript:void(0)', class: 'btn btn-outline-primary', id: 'new-folder', 'v-on:click': "show_new_folder"
+        div.mr-2
+          = link_to 'キャンセル', 'javascript:window.close()', class: 'btn btn-outline-primary'
+        div
+          = f.submit "Add Bookmark", class: 'btn btn-primary'
+
 
 = javascript_pack_tag 'bookmark'
