--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -66,7 +66,7 @@
     padding-bottom: 15px;
   }
   &__link {
-    display: block;
+    display: inline-block;
     padding: 5px 0;
   }
   &__capture {
