--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -18,7 +18,7 @@ nav.navbar.navbar-light.bg-dark
         = link_to 'Add Bookmark', add_bookmark_path, class: 'dropdown-item'
         = link_to 'Manage Bookmarks', '#', class: 'dropdown-item'
         = link_to 'Manage Folders', '#', class: 'dropdown-item'
-        = link_to 'Import Bookmarks', '#', class: 'dropdown-item'
+        = link_to 'Import Bookmarks', import_path, class: 'dropdown-item'
         = link_to 'Export Bookmarks', '#', class: 'dropdown-item'
         hr.my-1
         a.dropdown-item href="#" アカウント設定
