--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -55,6 +55,7 @@
     height: calc(100vh - 155px);
     min-width: 206px;
     max-width: 206px;
+    overflow: auto;
   }
   &__col--first {
     height: calc(100vh - 128px);
