--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,6 +5,11 @@
       p.m-0
         | Bookmark pages more easily. Drag this bookmarklet to the Bookmarks bar of your browser:
         a.btn.btn-sm.btn-primary.ml-2 href='javascript: (function () { var a = window, b = document, c = encodeURIComponent, d = a.open("http://localhost:3000/bookmarks/new?op=edit&output=popup&bkmk=" + c(b.location) + "&title=" + c(b.title), "bkmk_popup", "left=" + ((a.screenX || a.screenLeft) + 700) + ",top=" + ((a.screenY || a.screenTop) + 10) + ",height=510px,width=550px,resizable=1,alwaysRaised=1"); a.setTimeout(function () { d.focus() }, 300) })();' Bookmark
+  - if flash[:notice]
+    .alert.alert-primary.alert-dismissible.fade.show role="alert"
+      = flash[:notice]
+      button type="button" class="close" data-dismiss="alert" aria-label="Close"
+        span aria-hidden="true" &times;
   .container-fluid
     main.main.bookmarks
       bookmark-layout :_top_folder="#{ @top_folder.to_json }" :_folders="#{ @folders.to_json }" :_bookmarks="#{ @bookmarks.to_json }"
