--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -16,12 +16,11 @@ nav.navbar.navbar-light.bg-dark
         | Menu 
       .dropdown-menu aria-labelledby="navbarDropdownMenuLink"
         = link_to 'Add Bookmark', add_bookmark_path, class: 'dropdown-item'
-        = link_to 'Manage Bookmarks', '#', class: 'dropdown-item'
-        = link_to 'Manage Folders', '#', class: 'dropdown-item'
+        = link_to 'Manage Bookmarks', '#TODO:', class: 'dropdown-item'
         = link_to 'Import Bookmarks', import_path, class: 'dropdown-item'
-        = link_to 'Export Bookmarks', '#', class: 'dropdown-item'
+        = link_to 'Export Bookmarks', '#TODO:', class: 'dropdown-item'
         hr.my-1
-        a.dropdown-item href="#" アカウント設定
-        a.dropdown-item href="#" システム設定
+        a.dropdown-item href="#TODO:" アカウント設定
+        a.dropdown-item href="#TODO:" システム設定
         hr.my-1
-        a.dropdown-item href="#" ログアウト
+        = link_to 'Logout', destroy_account_session_path, class: 'dropdown-item', method: :delete
