--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,5 +1,5 @@
 - if flash[:notice]
-  .alert.alert-primary.alert-dismissible.fade.show role="alert"
+  .alert.alert-primary.alert-dismissible.fade.show.mb-0 role="alert"
     = flash[:notice]
     button type="button" class="close" data-dismiss="alert" aria-label="Close"
       span aria-hidden="true" &times;
