--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -72,6 +72,11 @@
     padding-top: 15px;
     padding-bottom: 15px;
   }
+  &__item {
+    .active {
+      background-color: #ccc;
+    }
+  }
   &__link {
     display: inline-block;
     padding: 5px 0;
