Change: フォルダ階層表示

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -107,9 +107,11 @@
   padding: 5px 15px;
   &__item {
     font-size: 0.7rem;
-    &:after {
-      content: ">";
-      padding: 0 10px;
+    &:not(:first-child) {
+      &:before {
+        content: ">";
+        padding: 0 10px;
+      }
     }
   }
 }
