--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -4,7 +4,7 @@
     .row.flex-xl-nowrap.justify-content-center
       main.main.col-6.mt-3
         h1 Add a bookmark
-        = form_for @bookmark, :remote => true do |f|
+        = form_for @bookmark do |f|
           .form-group
             = f.label :name
             = f.text_field :name, class: 'form-control'
