--- a/app/views/bookmarks/edit.html.slim
+++ b/app/views/bookmarks/edit.html.slim
@@ -1,20 +1,18 @@
 #app
+  = render "shared/navbar"
   main.p-3
     = form_for @bookmark, :remote => true do |f|
       .form-group
         = f.label :name
         = f.text_field :name, class: 'form-control'
-        .form-text.text-muted ex: HippoHack
 
       .form-group
         = f.label :url
         = f.text_field :url, class: 'form-control'
-        .form-text.text-muted ex: https://www.hippohack.me/
 
       .form-group
         = f.label :keyword
         = f.text_field :keyword, class: 'form-control'
-        .form-text.text-muted ex: Tool, Color, Design
 
       .form-group
         = f.label :folder_id
