--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -30,6 +30,6 @@
 
 .footer.bg-dark.pos-bottom
   .text-right.text-white.p-1.px-3
-    a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © hippohack
+    a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © HippoHack
 
 = javascript_pack_tag 'bookmark'
