--- a/app/views/bookmarks/search.html.erb
+++ b/app/views/bookmarks/search.html.erb
@@ -36,7 +36,7 @@
 
 <div class="footer bg-dark pos-bottom">
   <div class="text-right text-white p-1 px-3">
-    <a href="" class="copyright text-white" href="https://www.hippohack.me/" target="_blank">© hippohack</a>
+    <a class="copyright text-white" href="https://www.hippohack.me/" target="_blank">© HippoHack</a>
   </div>
 </div>
 
