--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,6 +12,6 @@
 
 .footer.bg-dark
   .text-right.text-white.p-1.px-3
-    a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © hippohack
+    a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © HippoHack
 
 = javascript_pack_tag 'bookmark'
