Change: 検索画面のフッター調整

--- a/app/views/bookmarks/search.html.erb
+++ b/app/views/bookmarks/search.html.erb
@@ -41,7 +41,7 @@
   </main>
 </div>
 
-<div class="footer bg-dark pos-bottom">
+<div class="footer bg-dark">
   <div class="text-right text-white p-1 px-3">
     <a class="copyright text-white" href="https://www.hippohack.me/" target="_blank">© HippoHack</a>
   </div>
