--- a/app/views/bookmarks/edit.html.slim
+++ b/app/views/bookmarks/edit.html.slim
@@ -17,7 +17,7 @@
       .form-group
         = f.label :folder_id
         .folder-list.p-3
-          folders :_hierarchy_data="#{ @folders.to_json }" :_all_folders="#{ @all_folders.to_json }" :_level="1" :_id="#{@top_folder_id}" :_is_new_folder="is_new_folder" :_new_folder_parent_id="new_folder_parent_id" :_belong_folder="#{ @bookmark.folder_id }"
+          folders :_hierarchy_data="#{ @folders.to_json }" :_all_folders="#{ @all_folders.to_json }" :_level="1" :_id="#{@top_folder_id}" :_is_new_folder="is_new_folder" :_new_folder_parent_id="new_folder_parent_id" :_belong_folder="#{ @bookmark.folder_id }" :_bookmark="#{ @bookmark.to_json }"
 
       .d-flex.mt-3
         div.mr-auto
