--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -3,7 +3,7 @@ nav.navbar.navbar-light.bg-dark
     img.d-inline-block.align-top.mr-2 src="https://getbootstrap.com/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""
     | Bookmarks
 
-  - if current_account
+  - if account_signed_in?
     = link_to(root_path, class: 'px-2 mr-2 text-white') do
       i.fa.fa-home.fa-lg aria-hidden="true"
 
@@ -11,7 +11,7 @@ nav.navbar.navbar-light.bg-dark
     = form_tag(search_bookmarks_path, :method => 'get', class: "flex-grow-1 mr-2")
       = search_field_tag :s, params[:s], { class: "form-control", id: "search-input", placeholder: "Search..." }
 
-  - if current_account
+  - if account_signed_in?
     ul.flex-row.navbar-nav.ml-auto
       li.nav-item.dropdown.ml-auto.px-2
         a.nav-link.dropdown-toggle.text-white href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
