--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -17,7 +17,7 @@ nav.navbar.navbar-light.bg-dark
         a.nav-link.dropdown-toggle.text-white href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
           | Menu 
         .dropdown-menu aria-labelledby="navbarDropdownMenuLink"
-          = link_to '#', class: 'dropdown-item' do
+          = link_to profile_path(current_account.profile), class: 'dropdown-item' do
             .d-flex.align-items-center
               img.d-inline-block.align-top.mr-2 src="#{image_url('bookmarks.svg')}" width="30" height="30" alt=""
               span
