--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,1 +1,40 @@
-= debug @profile
+#app
+  = render "shared/navbar"
+  main.p-3
+    = form_for @profile, html: { class: "profile-form" } do |f|
+      .d-flex
+        .avator
+          .avator__label Avator
+          .avator__img
+            span style="background-image:url(https://placehold.jp/150x150.png);"
+            button.avator__btn type="button" v-bind:class="{ active : isActiveAvatorEdit }" @mouseenter="isActiveAvatorEdit = true"  @mouseleave="isActiveAvatorEdit = false" data-toggle="modal" data-target="#editAvator"
+              | <i class="fa fa-pencil" aria-hidden="true"></i> edit
+        .form-items
+          .form-group
+            = f.label :name
+            = f.text_field :name, class: 'form-control'
+          .form-group
+            = f.label :twitter_account
+            = f.text_field :twitter_account, class: 'form-control'
+
+          = f.submit "保存する", { class: 'btn btn-primary' }
+
+    .modal id="editAvator" tabindex="-1" role="dialog"
+      .modal-dialog role="document"
+        .modal-content
+          = form_with model: @profile, class: "avator-form" do |f|
+            .modal-header
+              h5 class="modal-title" アバターを変更
+              button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                span aria-hidden="true" &times;
+            .modal-body
+              = f.file_field :avator, class: 'd-none'
+              button.avator-form__file-up-btn type="button" <i class="fa fa-picture-o" aria-hidden="true"></i> 写真をアップロード
+            .modal-footer
+              button type="button" class="btn btn-secondary" data-dismiss="modal" Close
+              button type="button" class="btn btn-primary" Save changes
+
+    pre.p-5
+      = debug @profile
+
+= javascript_pack_tag 'bookmark'
