--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -15,3 +15,4 @@
     a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © HippoHack
 
 = javascript_pack_tag 'bookmark'
+= stylesheet_pack_tag 'bookmark'
