Change:  = stylesheet_pack_tag 'bookmark' もれ。

--- a/app/views/bookmarks/new.html.slim
+++ b/app/views/bookmarks/new.html.slim
@@ -40,5 +40,5 @@
         div
           = f.submit "Add Bookmark", class: 'btn btn-primary'
 
-
 = javascript_pack_tag 'bookmark'
+= stylesheet_pack_tag 'bookmark'
