--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -42,3 +42,4 @@
     a.copyright.text-white href="https://www.hippohack.me/" target="_blank" © HippoHack
 
 = javascript_pack_tag 'bookmark'
+= stylesheet_pack_tag 'bookmark'
