--- a/app/views/bookmarks/edit.html.slim
+++ b/app/views/bookmarks/edit.html.slim
@@ -37,3 +37,4 @@
           = f.button "保存する", { type: 'button',  class: 'btn btn-primary', 'v-on:click': "submit" }
 
 = javascript_pack_tag 'bookmark'
+= stylesheet_pack_tag 'bookmark'
