Change: システム設定。

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -162,6 +162,11 @@ main {
   margin: 0 auto;
 }
 
+.settings-form {
+  max-width: 640px;
+  margin: 0 auto;
+}
+
 .avator {
   margin-right: 50px;
 
