--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -32,6 +32,6 @@ nav.navbar.navbar-light.bg-dark
           = link_to 'Export Bookmarks', '#TODO:', class: 'dropdown-item'
           hr.my-1
           a.dropdown-item href="#TODO:" アカウント設定
-          a.dropdown-item href="#TODO:" システム設定
+          a.dropdown-item href="#{ settings_path }" システム設定
           hr.my-1
           = link_to 'Logout', destroy_account_session_path, class: 'dropdown-item', method: :delete
