--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -222,3 +222,34 @@ main {
     border-radius: 100%;
   }
 }
+
+.site-image-form {
+  &__image {
+    position: relative;
+    display: block;
+
+    &:hover {
+      &:before {
+        content: "Edit";
+        display: inline-flex;
+        color: #fff;
+        background-color: #333;
+        opacity: 0.6;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+      }
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+
