--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -252,4 +252,27 @@ main {
   }
 }
 
+.field_with_errors {
+  input[type="text"] {
+    border-color: #ff0000;
+    background-color: #f9ecec;
+  }
+}
 
+.form-error {
+  color: #ff0000;
+
+  &:before {
+    content: "!";
+    color: #fff;
+    background-color: #ff0000;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 1.3;
+    margin-right: 4px;
+    font-weight: bold;
+  }
+}
