--- a/app/views/bookmarks/popup_edit.html.slim
+++ b/app/views/bookmarks/popup_edit.html.slim
@@ -26,6 +26,9 @@
           .form-group
             = f.label :url
             = f.text_field :url, class: 'form-control'
+            - if @bookmark.errors.messages[:url].first
+              .form-error.mt-1
+                = @bookmark.errors.messages[:url].first
 
           .form-group
             = f.label :keyword
