--- a/app/views/bookmarks/popup_edit.html.slim
+++ b/app/views/bookmarks/popup_edit.html.slim
@@ -44,7 +44,7 @@
                 = f.label :folder_id, "MAIN_FOLDER", style: "margin-left: 4px;", class: "folder__label", for: "bookmark_folder_id_#{@top_folder_id}"
 
               .pl-4
-                folders :_hierarchy_data="#{ @folders.to_json }" :_all_folders="#{ @all_folders.to_json }" :_level="1" :_id="#{@top_folder_id}" :_is_new_folder="is_new_folder" :_new_folder_parent_id="new_folder_parent_id" :_top_folder_id="#{@top_folder_id}"
+                folders :_hierarchy_data="#{ @folders.to_json }" :_all_folders="#{ @all_folders.to_json }" :_level="1" :_id="#{@top_folder_id}" :_is_new_folder="is_new_folder" :_new_folder_parent_id="new_folder_parent_id" :_top_folder_id="#{@top_folder_id}" :_bookmark="#{ @bookmark.to_json }"
 
           = hidden_field_tag :popup, 'true'
           = hidden_field_tag :top_folder, @top_folder_id
