--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -15,7 +15,7 @@ nav.navbar.navbar-light.bg-dark
     ul.flex-row.navbar-nav.ml-auto
       li.nav-item.dropdown.ml-auto.px-2
         a.nav-link.dropdown-toggle.text-white href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-          | Menu 
+          | Menu
         .dropdown-menu aria-labelledby="navbarDropdownMenuLink"
           = link_to profile_path(current_account.profile), class: 'dropdown-item' do
             .d-flex.align-items-center
@@ -27,11 +27,11 @@ nav.navbar.navbar-light.bg-dark
                 = current_account.profile.name
           hr.my-1
           = link_to 'Add Bookmark', add_bookmark_path, class: 'dropdown-item'
-          = link_to 'Manage Bookmarks', '#TODO:', class: 'dropdown-item'
+          / = link_to 'Manage Bookmarks', '#TODO:', class: 'dropdown-item'
           = link_to 'Import Bookmarks', import_path, class: 'dropdown-item'
-          = link_to 'Export Bookmarks', '#TODO:', class: 'dropdown-item'
+          / = link_to 'Export Bookmarks', '#TODO:', class: 'dropdown-item'
           hr.my-1
-          a.dropdown-item href="#TODO:" アカウント設定
+          a.dropdown-item href="#{ edit_account_registration_path }" アカウント設定
           a.dropdown-item href="#{ settings_path }" システム設定
           hr.my-1
           = link_to 'Logout', destroy_account_session_path, class: 'dropdown-item', method: :delete
