--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,16 +18,17 @@
           <% end %>
 
           <div class="form-group">
-            <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+            <%= f.label :new_password %> <i>(leave blank if you don't want to change it)</i><br />
             <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
             <% if @minimum_password_length %>
-              <br />
-              <em><%= @minimum_password_length %> characters minimum</em>
+              <div class="mt-1">
+                <em style="color: #888;"><%= @minimum_password_length %> characters minimum</em>
+              </div>
             <% end %>
           </div>
 
           <div class="form-group">
-            <%= f.label :password_confirmation %><br />
+            <%= f.label :new_password_confirmation %><br />
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
           </div>
 
