Change: formの体裁調整。

--- a/app/views/bookmarks/add.html.slim
+++ b/app/views/bookmarks/add.html.slim
@@ -4,7 +4,7 @@
   / = render "shared/validation_error"
   .container-fluid
     .row.flex-xl-nowrap.justify-content-center
-      main.main.col-6.mt-3
+      main.main.mt-3 style="max-width: 500px;"
         h1 Add a bookmark
         = form_for @bookmark do |f|
           .form-group
