--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/navbar" %>
   <div class="container-fluid">
     <div class="row flex-xl-nowrap justify-content-center">
-      <main class="main col-4 mt-3">
+      <main class="main mt-3" style="max-width: 500px;">
         <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
