--- a/app/views/settings/edit.html.slim
+++ b/app/views/settings/edit.html.slim
@@ -6,20 +6,32 @@
       = form_tag settings_update_path, { class: "settings-form", method: 'put' }
         .d-flex
           .form-items
-            - @settings.each do |setting|
+            - @settings.each_with_index do |setting, index|
               - if setting.key == 'lang'
                 .form-group
                   = label_tag setting.key, nil
-                  = hidden_field_tag "setting[][key]", setting.key
+                  = hidden_field_tag "setting[#{index}][key]", setting.key
                   / TODO: Make collection record
-                  = select_tag "setting[][value]", options_for_select([['Japanese', 'Japanese'], ['English', 'English']], setting.value), class: 'form-control'
+                  = select_tag "setting[#{index}][value]", options_for_select([['Japanese', 'Japanese'], ['English', 'English']], setting.value), class: 'form-control'
+              - elsif setting.key == 'show_many_visits' || setting.key == 'show_history'
+                .form-group
+                  = label_tag setting.key, nil, for: ''
+                  .form-check
+                    = radio_button_tag "setting[#{index}][value]", 'true', setting.value == 'true' ? true : false, { class: 'form-check-input mr-2', id: "#{setting.key}_enable" }
+                    label.form-check-label for="#{setting.key}_enable"
+                      | Enable
+                  .form-check
+                    = radio_button_tag "setting[#{index}][value]", 'false', setting.value == 'false' ? true : false, { class: 'form-check-input mr-2', id: "#{setting.key}_disable" }
+                    label.form-check-label for="#{setting.key}_disable"
+                      | Disable
+                  = hidden_field_tag "setting[#{index}][key]", setting.key 
               - else
                 .form-group
                   = label_tag setting.key, nil
-                  = hidden_field_tag "setting[][key]", setting.key
-                  = text_field_tag "setting[][value]", setting.value, class: 'form-control'
+                  = hidden_field_tag "setting[#{index}][key]", setting.key
+                  = text_field_tag "setting[#{index}][value]", setting.value, class: 'form-control'
 
-            = submit_tag "Save changes", { class: 'btn btn-primary' }
+            = submit_tag "Save changes", { class: 'btn btn-primary mt-2' }
 
 = javascript_pack_tag 'bookmark'
 = stylesheet_pack_tag 'bookmark'
