--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -8,3 +8,8 @@
     = "ERROR: #{flash[:error]}"
     button type="button" class="close" data-dismiss="alert" aria-label="Close"
       span aria-hidden="true" &times;
+- if flash[:alert]
+  .alert.alert-danger.alert-dismissible.fade.show.mb-0 role="alert"
+    = "ERROR: #{flash[:alert]}"
+    button type="button" class="close" data-dismiss="alert" aria-label="Close"
+      span aria-hidden="true" &times;
